--- a/infra.yaml
+++ b/infra.yaml
@@ -2,6 +2,7 @@ version: '3.3'
 
 volumes:
   pg:
+  redis_data:
 
 services:
   db_local:
@@ -11,3 +12,12 @@ services:
       - pg:/var/lib/postgresql/data
     ports:
       - "5433:5432"
+
+  redis:
+    image: redis:7-alpine
+    volumes:
+      - redis_data:/data
+    ports:
+      - "6379:6379"
+    command: redis-server --appendonly yes
+
